@@ -8,6 +8,7 @@
 	* added initial DB field labels
 	* made ApplicationManager a Singleton
 	* changed the community application to be abstract
+	* added interface for community application widgets
 
 2008-08-07 Ingo Renner  <ingo@typo3.org>
 
